<resources>
    <string name="app_name">Box-A-Lot</string>
    <string name="title_activity_map">mapActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_create_storage">CreateStorageroomActivity</string>
    <string name="input_room_address">Adresse på rummet?</string>
    <string name="input_room_city">By på rummet?</string>
    <string name="contact_landlord_btn">Contact Landlord</string>
    <string name="infor_marker_press_to_read_more_txt">Press to read more...</string>
    <string name="contact_landlord_btn_txt">Contact Landlord</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_contact_storage">contactStorage</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_about_us">About us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_home">Map</string>
    <string name="nav_my_page">My Page</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>
    <string name="mapTitle">Map</string>
    <string name="userTitle">User</string>
    <string name="storagefragment_marker_transition">storageFragMarkerTransition</string>
    <string name="title_activity_deletethis">deletethis</string>
    <string name="input_room_size">Hvor mange kvadratmeter er depotrummet?</string>
    <string name="input_room_price">Hvad er pisen på depotrummet?</string>
    <string name="input_room_country">Hvilket land befinder rummet sig i?</string>
    <string name="input_room_desc">Giv en kort beskrivelse af rummet</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="sign_out">Log af</string>

    <string name="facebook_app_id">200961497454786</string>
    <string name="fb_login_protocol_scheme">fb200961497454786</string>
    <string name="Spinner_txt">Choose storageroom type</string>
    <string name="sign_in">Log ind</string>
    <string name="action_search">Søg på område</string>
    <string name="search_hint">Søg efter placering</string>
    <string name="Add_pic">Tilføj billeder</string>
    <string name="createStorageBackBtnTxt">Tilbage</string>
    <string name="createStorageNextBtnTxt">næste</string>
    <string name="createStorageNextBtnCreateTxt">Opret</string>
    <string name="createStorageroomPage1SqmPriceTVHintTxt">Kvm pris</string>
    <string name="createStorageroomPage1PriceETHintTxt">Pris</string>
    <string name="createStorageroomPage1LengthETHintTxt">Længde i meter</string>
    <string name="createStorageroomPage1HeadlineTxt">Depot</string>
    <string name="createStorageroomPage1TypeStorageHeadlineTxt">Type opbevaring</string>
    <string name="createStorageroomPage1WidthETHintTxt">Bredde i meter</string>


    <string-array name="type_deport_array">
        <item>Værelse</item>
        <item>kælderrum</item>
        <item>Opbevarnigsrum</item>
        <item>Skur</item>
        <item>Garage</item>
        <item>Loftrum</item>
    </string-array>

</resources>
