<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gbackground">


    <TextView
        android:id="@+id/create_storageroom_page1_sqm_price_TV"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:hint="@string/createStorageroomPage1SqmPriceTVHintTxt"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/create_storageroom_page1_length_ET"
        app:layout_constraintTop_toTopOf="@+id/create_storageroom_page1_price_ET" />

    <EditText
        android:id="@+id/create_storageroom_page1_price_ET"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:hint="@string/createStorageroomPage1PriceETHintTxt"
        android:inputType="numberDecimal"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/create_storageroom_page1_width_ET"
        app:layout_constraintTop_toBottomOf="@+id/create_storageroom_page1_width_ET" />

    <EditText
        android:id="@+id/create_storageroom_page1_length_ET"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:inputType="numberDecimal"
        android:hint="@string/createStorageroomPage1LengthETHintTxt"
        android:textStyle="bold"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/create_storageroom_page1_type_storage_spinner"
        app:layout_constraintTop_toBottomOf="@+id/create_storageroom_page1_type_storage_spinner" />

    <TextView
        android:id="@+id/create_storageroom_page1_headline_TV"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/createStorageroomPage1HeadlineTxt"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.kenne.box_a_lot.customViews.NoDefaultSpinner
        android:id="@+id/create_storageroom_page1_type_storage_spinner"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/type_deport_array"
        android:prompt="@string/Spinner_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_storageroom_page1_type_storage_headline_TV"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

    <TextView
        android:id="@+id/create_storageroom_page1_type_storage_headline_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:text="@string/createStorageroomPage1TypeStorageHeadlineTxt"
        android:textStyle="bold"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/create_storageroom_page1_type_storage_spinner"
        app:layout_constraintTop_toBottomOf="@+id/create_storageroom_page1_headline_TV" />


    <EditText
        android:id="@+id/create_storageroom_page1_width_ET"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:hint="@string/createStorageroomPage1WidthETHintTxt"
        android:inputType="numberDecimal"
        android:textStyle="bold"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/create_storageroom_page1_type_storage_spinner"
        app:layout_constraintTop_toBottomOf="@+id/create_storageroom_page1_type_storage_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>